--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,31 @@
-[tool.poetry]
+[project]
 name = "eotools"
 version = "0.1-dev"
 description = "A collection of tools and modules for building processing chains."
-authors = ["HYGEOS team"]
-
-[tool.poetry.dependencies]
-python = "*"
-eoread = {git = "ssh://git@github.com/hygeos/eoread.git", develop = true}
-
-[tool.poetry.extras]
-dev = ["eoread"]
+authors = [{name = "HYGEOS team"}]
+requires-python = ">= 3.11"
+dependencies = ["core @ git+https://github.com/hygeos/core.git", "luts @ git+https://github.com/hygeos/luts.git"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.pypi-dependencies]
+eoread = {git = "https://github.com/hygeos/eoread.git"}
+
+[tool.pixi.dependencies]
+pytest-html = "*"
+pytest = "*"
+matplotlib-base = "*"
+pytest-xdist = "*"
+xarray = "*"
+openpyxl = "*"
+pint-xarray = "*"
+cf-xarray = "*"
+
+[tool.pixi.tasks]
+tests = "pytest tests/"
