Update core; various related fixes
Update the use of core.tools.Var
Workarounds after eoread update (eg use of v1_compat=True)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 git = [
     "core @ git+https://github.com/hygeos/core.git",
     "luts @ git+https://github.com/hygeos/luts.git",
-    "eoread @ git+https://github.com/hygeos/eoread.git"
+    "eoread[git] @ git+https://github.com/hygeos/eoread.git"
 ]
 gatiab = [
     "gatiab"
